fix text-overflow meal h4

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -583,6 +583,9 @@ footer .fa-hands-helping {
 }
 
 .meals h4 {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
   margin: 0;
 }
 
