--- a/sass/Components/_menus-header.scss
+++ b/sass/Components/_menus-header.scss
@@ -38,6 +38,9 @@
   margin-right: 5px;
 }
 .meals h4 {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
   margin: 0;
 }
 .starter h3, .dish h3, .dessert h3 {
